--- a/source/index.html
+++ b/source/index.html
@@ -124,6 +124,46 @@ call_to_action: "Do you have a project for us?"
 </div>
 <div class="team-member-container">
 	<article class="team-member">
+		<div class="team-member-content">
+			<header>
+				<h1>
+					Valeria @vleonardi
+				</h1>
+				<h2>
+					Valeria Leonardi
+				</h2>
+				<ul class="list-inline tags">
+					<li>
+						<a href="https://twitter.com/vleonardi">
+							Twitter
+						</a>
+					</li>
+					<li>
+						<a href="http://www.linkedin.com/in/valerialeonardi">
+							Linkedin
+						</a>
+					</li>
+					<li>
+						<a href="http://www.slideshare.net/ValeriaLeonardi">
+							Slideshare
+						</a>
+					</li>
+				</ul>
+			</header>
+			<p>
+				Geeky mum, music lover and clarinetist for more than ten years, I successfully share my time between my work and my two children. I started off writing C# code, and today I switch between WPF projects, Asp.NET MVC, Silverlight, to name but a few. After a brief Python development experience, I am now enthusiastic about developing mobile applications for Android. Whilst during the day I work with the team to deliver bespoke projects for clients, once home I "replace" the computer with the sewing machine, to dedicate myself to my sewing hobby!
+			</p>
+		</div>
+		<div class="team-member-picture">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/vale-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/vale-super-550.png" alt="">
+		</div>
+	</article>
+</div>
+<div class="team-member-container">
+	<article class="team-member">
 		<div class="team-member-picture hidden-sm hidden-xs">
 			<div class="normal-container">
 				<img class="img-responsive" src="/images/ritratti-trasp-550/ste-550.png" alt="">
@@ -168,38 +208,33 @@ call_to_action: "Do you have a project for us?"
 		<div class="team-member-content">
 			<header>
 				<h1>
-					Valeria @vleonardi
+					Alberto
 				</h1>
 				<h2>
-					Valeria Leonardi
+					Alberto venturini
 				</h2>
 				<ul class="list-inline tags">
 					<li>
-						<a href="https://twitter.com/vleonardi">
-							Twitter
-						</a>
-					</li>
-					<li>
-						<a href="http://www.linkedin.com/in/valerialeonardi">
+						<a href="http://www.linkedin.com/pub/alberto-venturini/9/89b/652">
 							Linkedin
 						</a>
 					</li>
 					<li>
-						<a href="http://www.slideshare.net/ValeriaLeonardi">
-							Slideshare
+						<a href="http://github.com/albertoventurini">
+							Github
 						</a>
 					</li>
 				</ul>
 			</header>
 			<p>
-				Geeky mum, music lover and clarinetist for more than ten years, I successfully share my time between my work and my two children. I started off writing C# code, and today I switch between WPF projects, Asp.NET MVC, Silverlight, to name but a few. After a brief Python development experience, I am now enthusiastic about developing mobile applications for Android. Whilst during the day I work with the team to deliver bespoke projects for clients, once home I "replace" the computer with the sewing machine, to dedicate myself to my sewing hobby!
+				Developing software has been my passion since childhood, and I still remember with a tinge of nostalgia the days when I used to code old-school video games! Through the years my passion has become my professional career, and the same passion drives me every day when I craft quality software with the rest of the team. "Lifelong learning" is my motto, both professionally and personally: be it a programming language, a sport or a recipe, if it's new, I've got to try it! When I am not sitting in front of a computer monitor, I like to unwind by hiking in the nearby mountains, snapping pictures and attempting to play the piano.
 			</p>
 		</div>
 		<div class="team-member-picture">
 			<div class="normal-container">
-				<img class="img-responsive" src="/images/ritratti-trasp-550/vale-550.png" alt="">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/alb-550.png" alt="">
 			</div>
-			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/vale-super-550.png" alt="">
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/alb-super-550.png" alt="">
 		</div>
 	</article>
 </div>
