--- a/source/it/index.html
+++ b/source/it/index.html
@@ -125,6 +125,46 @@ call_to_action: "Hai un progetto per noi?"
 </div>
 <div class="team-member-container">
 	<article class="team-member">
+		<div class="team-member-content">
+			<header>
+				<h1>
+					Valeria @vleonardi
+				</h1>
+				<h2>
+					Valeria Leonardi
+				</h2>
+				<ul class="list-inline tags">
+					<li>
+						<a href="https://twitter.com/vleonardi">
+							Twitter
+						</a>
+					</li>
+					<li>
+						<a href="http://www.linkedin.com/in/valerialeonardi">
+							Linkedin
+						</a>
+					</li>
+					<li>
+						<a href="http://www.slideshare.net/ValeriaLeonardi">
+							Slideshare
+						</a>
+					</li>
+				</ul>
+			</header>
+			<p>
+				Mamma geek, appassionata di musica e clarinettista da pi&#249; di dieci anni. Divisa tra il lavoro e i miei due figli, ho iniziato scrivendo codice in C#, alternando, fino ad oggi, progetti in WPF, Asp.NET MVC e Silverlight. Dopo una breve esperienza di sviluppo in Python, mi sono appassionata alle applicazioni mobile su Android. Se durante il giorno confeziono insieme al team progetti su misura per i clienti, una volta a casa &quot;rimpiazzo&quot; il computer con la macchina da cucire, per dedicarmi all’hobby di taglio e cucito.
+			</p>
+		</div>
+		<div class="team-member-picture">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/vale-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/vale-super-550.png" alt="">
+		</div>
+	</article>
+</div>
+<div class="team-member-container">
+	<article class="team-member">
 		<div class="team-member-picture hidden-sm hidden-xs">
 			<div class="normal-container">
 				<img class="img-responsive" src="/images/ritratti-trasp-550/ste-550.png" alt="">
@@ -169,38 +209,34 @@ call_to_action: "Hai un progetto per noi?"
 		<div class="team-member-content">
 			<header>
 				<h1>
-					Valeria @vleonardi
+					Alberto
 				</h1>
 				<h2>
-					Valeria Leonardi
+					Alberto Venturini
 				</h2>
 				<ul class="list-inline tags">
 					<li>
-						<a href="https://twitter.com/vleonardi">
-							Twitter
-						</a>
-					</li>
-					<li>
-						<a href="http://www.linkedin.com/in/valerialeonardi">
+						<a href="http://www.linkedin.com/pub/alberto-venturini/9/89b/652">
 							Linkedin
 						</a>
 					</li>
 					<li>
-						<a href="http://www.slideshare.net/ValeriaLeonardi">
-							Slideshare
+						<a href="http://github.com/albertoventurini">
+							Github
 						</a>
 					</li>
 				</ul>
 			</header>
 			<p>
-				Mamma geek, appassionata di musica e clarinettista da pi&#249; di dieci anni. Divisa tra il lavoro e i miei due figli, ho iniziato scrivendo codice in C#, alternando, fino ad oggi, progetti in WPF, Asp.NET MVC e Silverlight. Dopo una breve esperienza di sviluppo in Python, mi sono appassionata alle applicazioni mobile su Android. Se durante il giorno confeziono insieme al team progetti su misura per i clienti, una volta a casa &quot;rimpiazzo&quot; il computer con la macchina da cucire, per dedicarmi all’hobby di taglio e cucito.
+				Sviluppare software è la mia passione fin da bambino: ricordo ancora con una punta di nostalgia i giorni in cui scrivevo videogiochi vecchia scuola! Negli anni la mia passione è diventata la mia carriera professionale, ed è con la stessa passione che, ogni giorno, confeziono codice di qualità con il resto del team. Il mio motto è "lifelong learning", sia professionalmente che personalmente: che sia un linguaggio di programmazione, uno sport o una ricetta, se è qualcosa che non conosco la devo provare! Quando non sono seduto di fronte a un monitor mi piace staccare la spina camminando nelle montagne vicine, facendo fotografie e cercando di suonare il piano.
 			</p>
 		</div>
 		<div class="team-member-picture">
 			<div class="normal-container">
-				<img class="img-responsive" src="/images/ritratti-trasp-550/vale-550.png" alt="">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/alb-550.png" alt="">
 			</div>
-			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/vale-super-550.png" alt="">
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/alb-super-550.png" alt="">
 		</div>
 	</article>
 </div>
+
