--- a/source/it/index.html
+++ b/source/it/index.html
@@ -228,7 +228,7 @@ call_to_action: "Hai un progetto per noi?"
 				</ul>
 			</header>
 			<p>
-				Sviluppare software è la mia passione fin da bambino: ricordo ancora con una punta di nostalgia i giorni in cui scrivevo videogiochi vecchia scuola! Negli anni la mia passione è diventata la mia carriera professionale, ed è con la stessa passione che, ogni giorno, confeziono codice di qualità con il resto del team. Il mio motto è "lifelong learning", sia professionalmente che personalmente: che sia un linguaggio di programmazione, uno sport o una ricetta, se è qualcosa che non conosco la devo provare! Quando non sono seduto di fronte a un monitor mi piace staccare la spina camminando nelle montagne vicine, facendo fotografie e cercando di suonare il piano.
+				Sviluppare software è la mia passione fin da bambino: ricordo ancora con una punta di nostalgia i giorni in cui scrivevo videogiochi vecchia scuola! Negli anni la mia passione è diventata la mia carriera professionale, ed è con la stessa passione che, ogni giorno, confeziono codice di qualità con il resto del team. Il mio motto è "lifelong learning", sia professionalmente che personalmente: che sia un linguaggio di programmazione, uno sport o una ricetta, se è qualcosa che non conosco la devo provare! Quando non sono seduto di fronte a un monitor mi piace staccare la spina camminando sulle montagne vicine, facendo fotografie e cercando di suonare il piano.
 			</p>
 		</div>
 		<div class="team-member-picture">
