--- a/source/index.html
+++ b/source/index.html
@@ -238,3 +238,44 @@ call_to_action: "Do you have a project for us?"
 		</div>
 	</article>
 </div>
+<div class="team-member-container">
+	<article class="team-member">
+		<div class="team-member-picture hidden-sm hidden-xs">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/madda-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/madda-super-550.png" alt="">
+		</div>
+		<div class="team-member-content">
+			<header>
+				<h1>
+					Maddalena
+				</h1>
+				<h2>
+					Maddalena Germinario
+				</h2>
+				<ul class="list-inline tags">
+					<li>
+						<a href="https://twitter.com/10Madda">
+							Twitter
+						</a>
+					</li>
+					<li>
+						<a href=" http://www.linkedin.com/pub/maddalena-germinario/67/628/111">
+							Linkedin
+						</a>
+					</li>
+				</ul>
+			</header>
+			<p>
+				When I was a little girl, if someone asked me what I would want to be as a grown-up I used to answer "an engineer".  The passion for new technologies naturally led me to Informatics. With a lot of sacrifice and perseverance my  dream came true: I have been working as a software developer for a little more than 3 years.  I'm sure that the best is yet to come and so I face the daily challenges of my work willing to improve my skills and learn new things, also relying on the fruitful cooperation with the team.  When I turn off the computer, I enjoy my great passions: AS Roma football team and Francesco Totti, shopping (I'm a bit of a fashion addict) and travelling.
+			</p>
+		</div>
+		<div class="team-member-picture visible-sm visible-xs">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/madda-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/madda-super-550.png" alt="">
+		</div>
+	</article>
+</div>
