--- a/source/it/index.html
+++ b/source/it/index.html
@@ -239,4 +239,50 @@ call_to_action: "Hai un progetto per noi?"
 		</div>
 	</article>
 </div>
+<div class="team-member-container">
+	<article class="team-member">
+		<div class="team-member-picture hidden-sm hidden-xs">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/madda-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/madda-super-550.png" alt="">
+		</div>
+		<div class="team-member-content">
+			<header>
+				<h1>
+					Maddalena
+				</h1>
+				<h2>
+					Maddalena Germinario
+				</h2>
+				<ul class="list-inline tags">
+					<li>
+						<a href="https://twitter.com/10Madda">
+							Twitter
+						</a>
+					</li>
+					<li>
+						<a href="http://www.linkedin.com/pub/maddalena-germinario/67/628/111">
+							Linkedin
+						</a>
+					</li>
+				</ul>
+			</header>
+			<p>
+				Quando mi chiedevano cosa avrei voluto fare da grande, rispondevo sempre l'ingegnere.
+				La passione per le nuove tecnologie ha poi discriminato la strada da percorrere.
+				Con sacrifici e perseveranza il sogno è diventato realtà e svolgo il lavoro di sviluppatore software da poco più di tre anni.
+				Sono convinta che il meglio debba ancora venire ed è con lo spirito di migliorare sempre e la volontà di imparare cose nuove che affronto le sfide quotidiane del mio lavoro con l'aiuto indispensabile del team.
+				Spento il computer, dedico il mio tempo alle mie grandi passioni: Totti e la AS Roma, lo shopping (sono una vera e propria fashion addicted) e i viaggi.
+			</p>
+		</div>
+		<div class="team-member-picture visible-sm visible-xs">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/madda-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/madda-super-550.png" alt="">
+		</div>
+	</article>
+</div>
+
 
