--- a/source/index.html
+++ b/source/index.html
@@ -268,7 +268,7 @@ call_to_action: "Do you have a project for us?"
 				</ul>
 			</header>
 			<p>
-				When I was a little girl, if someone asked me what I would want to be as a grown-up I used to answer "an engineer".  The passion for new technologies naturally led me to Informatics. With a lot of sacrifice and perseverance my  dream came true: I have been working as a software developer for a little more than 3 years.  I'm sure that the best is yet to come and so I face the daily challenges of my work willing to improve my skills and learn new things, also relying on the fruitful cooperation with the team.  When I turn off the computer, I enjoy my great passions: AS Roma football team and Francesco Totti, shopping (I'm a bit of a fashion addict) and travelling.
+				When I was a little girl, if someone asked me what I would want to be as a grown-up I used to answer "an engineer".  The passion for new technologies naturally led me to Computer Science. With a lot of sacrifice and perseverance my  dream came true: I have been working as a software developer for more than 3 years.  I'm sure that the best is yet to come and so I face the daily challenges of my work willing to improve my skills and learn new things, also relying on the fruitful cooperation with the team.  When I turn off the computer, I enjoy my great passions: AS Roma football team and Francesco Totti, shopping (I'm a bit of a fashion addict) and travelling.
 			</p>
 		</div>
 		<div class="team-member-picture visible-sm visible-xs">
