--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@ call_to_action: "Do you have a project for us?"
 		of software engineers
 	</h1>
 	<p>
-		In our team we only have space for those who have a wild passion for technology and perfection. We are a group of 5 developers who like working in a team, but we also give our best working individually listening to our favorite music.
+		In our team we only have space for those who have a wild passion for technology and perfection. We are a group of 7 developers who like working in a team, but we also give our best working individually listening to our favorite music.
 	</p>
 	<p>
 		We strongly believe in keeping each other informed and our typical day always starts with a standup meeting. Training is another fundamental element of our life as developers: we spend a lot of time learning, getting to know and trying out new technologies which helps us improve the way we write software.
@@ -268,7 +268,7 @@ call_to_action: "Do you have a project for us?"
 				</ul>
 			</header>
 			<p>
-				When I was a little girl, if someone asked me what I would want to be as a grown-up I used to answer "an engineer".  The passion for new technologies naturally led me to Computer Science. With a lot of sacrifice and perseverance my  dream came true: I have been working as a software developer for more than 3 years.  I'm sure that the best is yet to come and so I face the daily challenges of my work willing to improve my skills and learn new things, also relying on the fruitful cooperation with the team.  When I turn off the computer, I enjoy my great passions: AS Roma football team and Francesco Totti, shopping (I'm a bit of a fashion addict) and travelling.
+				When I was a little girl, if someone asked me what I would want to be as a grown-up I used to answer "an engineer". The passion for new technologies naturally led me to Computer Science. With a lot of sacrifice and perseverance my  dream came true: I have been working as a software developer for more than 3 years. I'm sure that the best is yet to come and so I face the daily challenges of my work willing to improve my skills and learn new things, also relying on the fruitful cooperation with the team. When I turn off the computer, I enjoy my great passions: AS Roma football team and Francesco Totti, shopping (I'm a bit of a fashion addict) and travelling.
 			</p>
 		</div>
 		<div class="team-member-picture visible-sm visible-xs">
@@ -276,6 +276,48 @@ call_to_action: "Do you have a project for us?"
 				<img class="img-responsive" src="/images/ritratti-trasp-550/madda-550.png" alt="">
 			</div>
 			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/madda-super-550.png" alt="">
+		</div>
+	</article>
+</div>
+<div class="team-member-container">
+	<article class="team-member">
+		<div class="team-member-content">
+			<header>
+				<h1>
+					Pietro
+				</h1>
+				<h2>
+					Pietro Martinelli
+				</h2>
+				<ul class="list-inline tags">
+					<li>
+						<a href="https://it.linkedin.com/in/pietromartinelli">
+							Linkedin
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/pietrom">
+							Github
+						</a>
+					</li>
+					<li>
+						<a href="https://twitter.com/amicofragile78">
+							Twitter
+						</a>
+					</li>
+				</ul>
+			</header>
+			<p>
+				I'm an experienced software engineer: I'm working since 2003 and I grew up professionally in the Java and JEE ecosystem. However, I always tried to keep alive my curiosity and my desire to learn something new every day: I therefore welcomed with enthusiasm the opportunity to bring to play my architectural and methodological skills in a different technological environment, firmly belief that the real common language is to desire to make things in the most clean and elegant way and to continuously share informations, skills and experiences.
+I collaborate since over ten years as a teaching assistant with the University of Brescia, discovering and rediscovering that teaching is the best way to learn.
+I'm a passionate cyclist and a serial reader - from Divina Commedia to technical readings, from novels to the phone book - but the great passion of my life are "my women": my wife and our wonderful daughters.
+			</p>
+		</div>
+		<div class="team-member-picture">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/pietro-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/pietro-super-550.png" alt="">
 		</div>
 	</article>
 </div>
