--- a/source/it/index.html
+++ b/source/it/index.html
@@ -16,7 +16,7 @@ call_to_action: "Hai un progetto per noi?"
 		di software engineer
 	</h1>
 	<p>
-		Nel nostro team c’è spazio solo per chi ha una passione sfrenata per la tecnologia e per la perfezione. Siamo 5 sviluppatori, ci piace molto lavorare in squadra, ma diamo il massimo anche da soli, immersi nella nostra musica preferita.
+		Nel nostro team c’è spazio solo per chi ha una passione sfrenata per la tecnologia e per la perfezione. Siamo 7 sviluppatori, ci piace molto lavorare in squadra, ma diamo il massimo anche da soli, immersi nella nostra musica preferita.
 	</p>
 	<p>
 		Crediamo fortemente nella condivisione delle informazioni e la nostra giornata tipo inizia sempre con uno standup meeting di gruppo. La formazione è un altro elemento fondamentale della vita aziendale: dedichiamo molto tempo a capire, conoscere e provare nuove tecnologie per migliorare il modo in cui scriviamo software.
@@ -284,5 +284,45 @@ call_to_action: "Hai un progetto per noi?"
 		</div>
 	</article>
 </div>
-
-
+<div class="team-member-container">
+	<article class="team-member">
+		<div class="team-member-content">
+			<header>
+				<h1>
+					Pietro
+				</h1>
+				<h2>
+					Pietro Martinelli
+				</h2>
+				<ul class="list-inline tags">
+					<li>
+						<a href="https://it.linkedin.com/in/pietromartinelli">
+							Linkedin
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/pietrom">
+							Github
+						</a>
+					</li>
+					<li>
+						<a href="https://twitter.com/amicofragile78">
+							Twitter
+						</a>
+					</li>
+				</ul>
+			</header>
+			<p>
+				Lavoro come ingegnere del software da una dozzina d'anni. Sono cresciuto professionalmente nel mondo Java e JEE ma ho sempre cercato di mantenere vivi la mia curiosità ed il mio desiderio di imparare ogni giorno qualcosa di nuovo: ho dunque accolto con molto entusiasmo l'occasione di rimettere in gioco le mie competenze architetturali e metodologiche in un diverso contesto tecnologico, forte della convinzione che la vera lingua comune consiste nell'amore per il "fare le cose bene" e per la condivisione continua di informazioni ed esperienze.
+Da oltre dieci anni collaboro come esercitatore con l'Università di Brescia, scoprendo e riscoprendo che insegnare è il modo migliore di imparare.
+Sono un appassionato ciclista (rigorosamente su strada) ed un lettore seriale (dalla Divina Commedia a testi tecnici, dai romanzi all'elenco del telefono), ma la grande passione della mia vita sono "le mie donne": mia moglie e le nostre splendide bimbe.
+			</p>
+		</div>
+		<div class="team-member-picture">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/pietro-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/pietro-super-550.png" alt="">
+		</div>
+	</article>
+</div>
