--- a/source/index.html
+++ b/source/index.html
@@ -321,3 +321,37 @@ I'm a passionate cyclist and a serial reader - from Divina Commedia to technical
 		</div>
 	</article>
 </div>
+<div class="team-member-container">
+	<article class="team-member">
+		<div class="team-member-picture hidden-sm hidden-xs">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/chiara-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/chiara-super-550.png" alt="">
+		</div>
+		<div class="team-member-content">
+			<header>
+				<h1>
+					Chiara
+				</h1>
+				<h2>
+					Chiara Ghiselli
+				</h2>
+				<ul class="list-inline tags">
+				</ul>
+			</header>
+			<p>
+				My background has definitely classic imprint, but put aside the greek dictionary and the pedagogical texts,
+				a little 'chance and a little' choices have made me arrive and become familiar with the world of the secretariat and administration.
+				My motto is "order", I like to find the right place for all the things and I have a passion for organization and arrangement, so for the desk as the walls of the house.
+				In my free time I love to read and I enjoy cooking cakes for my two girls and my husband.
+			</p>
+		</div>
+		<div class="team-member-picture visible-sm visible-xs">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/chiara-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/chiara-super-550.png" alt="">
+		</div>
+	</article>
+</div>
