--- a/source/it/index.html
+++ b/source/it/index.html
@@ -326,3 +326,37 @@ Sono un appassionato ciclista (rigorosamente su strada) ed un lettore seriale (d
 		</div>
 	</article>
 </div>
+<div class="team-member-container">
+	<article class="team-member">
+		<div class="team-member-picture hidden-sm hidden-xs">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/chiara-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/chiara-super-550.png" alt="">
+		</div>
+		<div class="team-member-content">
+			<header>
+				<h1>
+					Chiara
+				</h1>
+				<h2>
+					Chiara Ghiselli
+				</h2>
+				<ul class="list-inline tags">
+				</ul>
+			</header>
+			<p>
+				La mia formazione è decisamente di impronta classica ma, messi da parte il dizionario di greco e i testi di pedagogia, un po' il caso e un po' le scelte mi hanno fatto approdare e familiarizzare con il mondo della segreteria e dell'amministrazione.
+La mia parola d'ordine è "ordine", mi piace trovare il posto giusto a ogni cosa e sono appassionata di organizzazione e sistemazione, tanto alla scrivania quanto tra le mura di casa.
+Nel tempo libero amo leggere e mi diverto a cucinare dolci per le mie due bambine e per mio marito.
+
+			</p>
+		</div>
+		<div class="team-member-picture visible-sm visible-xs">
+			<div class="normal-container">
+				<img class="img-responsive" src="/images/ritratti-trasp-550/chiara-550.png" alt="">
+			</div>
+			<img class="img-responsive superhero" src="/images/ritratti-trasp-550/chiara-super-550.png" alt="">
+		</div>
+	</article>
+</div>
