--- a/source/index.html
+++ b/source/index.html
@@ -341,10 +341,11 @@ I'm a passionate cyclist and a serial reader - from Divina Commedia to technical
 				</ul>
 			</header>
 			<p>
-				My background has definitely classic imprint, but put aside the greek dictionary and the pedagogical texts,
-				a little 'chance and a little' choices have made me arrive and become familiar with the world of the secretariat and administration.
-				My motto is "order", I like to find the right place for all the things and I have a passion for organization and arrangement, so for the desk as the walls of the house.
-				In my free time I love to read and I enjoy cooking cakes for my two girls and my husband.
+				My background is based on classical studies. Having put aside the Greek dictionary and the pedagogical textbooks,
+				my choices and a bit of chance have led me to become familiar with the world of secretariat and administration.
+				My motto is "order", I like to find the right place for everything and I am passionate about organization and arrangement,
+				as much on the desk as within the walls of the house.
+				In my free time I love reading and I enjoy cooking cakes for my two girls and my husband.
 			</p>
 		</div>
 		<div class="team-member-picture visible-sm visible-xs">
